[package]
name = "pprof-rs-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
env_logger = "0.11.3"
flate2 = "1.0.30"
pprof = { version = "0.13.0", features = ["flamegraph", "protobuf-codec"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
